2008-06-15  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Enhanced snap-to-cylinder math
	  - Improved math for rounding starting sector to cylinder
	    boundaries for logical partitions, and the first primary
	    partition for MBR and GPT partition tables.
	  - Closes GParted bug #432525 

	* include/Dialog_Base_Partition.h,
	  src/Dialog_Base_Partition.cc,
	  include/Dialog_Partition_New.h,
	  src/Dialog_Partition_New.cc: Migrated checkbutton.
	  - Moved "Round to cylinders" checkbutton from partition new
	    dialog to partition base dialog so that it may be used
	    by all inheritors (e.g., New, Copy, and Resize/Move).

2008-06-12  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc: Changed 3 grammatical errors to dashes.
	  - Closes GParted bug #533637

2008-06-10  Curtis Gedak  <gedakc@gmail.com>

	* src/main.cc: Changed wording of root privilege required warning.
	  - Closes GParted bug #534072

	* src/Dialog_Progress.cc: Added proper PO file plural handling.
	  - fixed a few spelling errors.

	* src/Win_GParted.cc: Added proper PO file plural handling.
	  - Closes GParted bug #315291

2008-05-10  Curtis Gedak  <gedakc@gmail.com>

	* README: Removed absolute requirement for hal-lock.

	* gparted.in: Enhanced script to use hal-lock only if it exists
	  - This removes the absolute requirement for hal-lock and
	    enables systems without HAL to use GParted.

	* configure.in: Removed check for hal-lock program (added 2008-05-08)

2008-05-08  Curtis Gedak  <gedakc@gmail.com>

	* README: Added note about hal-lock and HAL requirement

	* configure.in: Added check for hal-lock program

	* src/GParted_Core.cc: Added parse devices from /proc/partitions
	  - If /proc/partitions doesn't exist then use ped_device_probe_all
	  - Closes GParted bugs #351753, and #453555

2008-05-06  Curtis Gedak  <gedakc@gmail.com>

	* gparted.in: Fixed problem with command line devices being ignored
	  - This problem was introduced in version 0.3.7
